Reflect changes in jobs